--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
       <div class="mu-fbt-list-item">
         <input class="mu-checkbox" type="checkbox" id="input-1" checked>
         <label for="input-1" class="mu-checkbox-label">
-          <svg viewBox="0 0 24 24">
-            <path d="M9 20l-7-7 3-3 4 4L19 4l3 3z"></path>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18" fill="none">
+            <path d="M4.5 8.93878L7.52727 12L13.5 6" stroke="currentColor" stroke-width="2.25" stroke-linecap="round" stroke-linejoin="round"></path>
           </svg>
         </label>
 
@@ -83,8 +83,8 @@
       <div class="mu-fbt-list-item">
         <input class="mu-checkbox" type="checkbox" id="input-2" checked>
         <label for="input-2" class="mu-checkbox-label">
-          <svg viewBox="0 0 24 24">
-            <path d="M9 20l-7-7 3-3 4 4L19 4l3 3z"></path>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18" fill="none">
+            <path d="M4.5 8.93878L7.52727 12L13.5 6" stroke="currentColor" stroke-width="2.25" stroke-linecap="round" stroke-linejoin="round"></path>
           </svg>
         </label>
 
@@ -102,8 +102,8 @@
       <div class="mu-fbt-list-item">
         <input class="mu-checkbox" type="checkbox" id="input-3" checked>
         <label for="input-3" class="mu-checkbox-label">
-          <svg viewBox="0 0 24 24">
-            <path d="M9 20l-7-7 3-3 4 4L19 4l3 3z"></path>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18" fill="none">
+            <path d="M4.5 8.93878L7.52727 12L13.5 6" stroke="currentColor" stroke-width="2.25" stroke-linecap="round" stroke-linejoin="round"></path>
           </svg>
         </label>
 
@@ -121,8 +121,8 @@
       <div class="mu-fbt-list-item">
         <input class="mu-checkbox" type="checkbox" id="input-4" checked>
         <label for="input-4" class="mu-checkbox-label">
-          <svg viewBox="0 0 24 24">
-            <path d="M9 20l-7-7 3-3 4 4L19 4l3 3z"></path>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18" fill="none">
+            <path d="M4.5 8.93878L7.52727 12L13.5 6" stroke="currentColor" stroke-width="2.25" stroke-linecap="round" stroke-linejoin="round"></path>
           </svg>
         </label>
 
@@ -141,8 +141,8 @@
       <div class="mu-fbt-list-item">
         <input class="mu-checkbox" type="checkbox" id="input-5" checked>
         <label for="input-5" class="mu-checkbox-label">
-          <svg viewBox="0 0 24 24">
-            <path d="M9 20l-7-7 3-3 4 4L19 4l3 3z"></path>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18" fill="none">
+            <path d="M4.5 8.93878L7.52727 12L13.5 6" stroke="currentColor" stroke-width="2.25" stroke-linecap="round" stroke-linejoin="round"></path>
           </svg>
         </label>
 
@@ -161,8 +161,8 @@
       <div class="mu-fbt-list-item">
         <input class="mu-checkbox" type="checkbox" id="input-6" checked>
         <label for="input-6" class="mu-checkbox-label">
-          <svg viewBox="0 0 24 24">
-            <path d="M9 20l-7-7 3-3 4 4L19 4l3 3z"></path>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18" fill="none">
+            <path d="M4.5 8.93878L7.52727 12L13.5 6" stroke="currentColor" stroke-width="2.25" stroke-linecap="round" stroke-linejoin="round"></path>
           </svg>
         </label>
 
