--- a/index.html
+++ b/index.html
@@ -56,20 +56,21 @@
           <span class="mu-fbt-total-price">$20.00</span>
           <span class="mu-fbt-total-original">$35.97</span>
         </div>
-        <button class="mu-fbt-add-btn">Add Selected to Cart</button>
+        <button class="mu-fbt-add-btn">Add selected to cart</button>
       </div>
     </div>
   
     <div class="mu-fbt-list">
       <div class="mu-fbt-list-item">
-        <input class="mu-checkbox" type="checkbox" id="input-1" checked>
-        <label for="input-1" class="mu-checkbox-label">
+        <div class="mu-checkbox">
+          <input type="checkbox" id="input-1" checked>
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18" fill="none">
             <path d="M4.5 8.93878L7.52727 12L13.5 6" stroke="currentColor" stroke-width="2.25" stroke-linecap="round" stroke-linejoin="round"></path>
           </svg>
-        </label>
+        </div>
+      
+        <label for="input-1" class="mu-fbt-list-title">Women Beige Slipper IFS-SLP25-007</label>
 
-        <span class="mu-fbt-list-title">Women Beige Slipper IFS-SLP25-007</span>
         <select class="mu-fbt-select">
           <option>Medium black</option>
           <option>Large black</option>
@@ -81,14 +82,14 @@
       </div>
     
       <div class="mu-fbt-list-item">
-        <input class="mu-checkbox" type="checkbox" id="input-2" checked>
-        <label for="input-2" class="mu-checkbox-label">
+        <div class="mu-checkbox">
+          <input type="checkbox" id="input-2" checked>
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18" fill="none">
             <path d="M4.5 8.93878L7.52727 12L13.5 6" stroke="currentColor" stroke-width="2.25" stroke-linecap="round" stroke-linejoin="round"></path>
           </svg>
-        </label>
+        </div>
 
-        <span class="mu-fbt-list-title">Women Light Brown Heels IFS-HLS25-008</span>
+        <label for="input-2" class="mu-fbt-list-title">Women Light Brown Heels IFS-HLS25-008</label>
         <select class="mu-fbt-select">
           <option>M</option>
           <option>L</option>
@@ -100,14 +101,15 @@
       </div>
 
       <div class="mu-fbt-list-item">
-        <input class="mu-checkbox" type="checkbox" id="input-3" checked>
-        <label for="input-3" class="mu-checkbox-label">
+        <div class="mu-checkbox">
+          <input type="checkbox" id="input-3" checked>
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18" fill="none">
             <path d="M4.5 8.93878L7.52727 12L13.5 6" stroke="currentColor" stroke-width="2.25" stroke-linecap="round" stroke-linejoin="round"></path>
           </svg>
-        </label>
+        </div>
 
-        <span class="mu-fbt-list-title">Sky Blue Shoulder Bag IBS-SHB25-032</span>
+
+        <label for="input-3" class="mu-fbt-list-title">Sky Blue Shoulder Bag IBS-SHB25-032</label>
         <select class="mu-fbt-select">
           <option>M</option>
           <option>L</option>
@@ -119,15 +121,14 @@
       </div>
 
       <div class="mu-fbt-list-item">
-        <input class="mu-checkbox" type="checkbox" id="input-4" checked>
-        <label for="input-4" class="mu-checkbox-label">
+        <div class="mu-checkbox">
+          <input type="checkbox" id="input-4" checked>
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18" fill="none">
             <path d="M4.5 8.93878L7.52727 12L13.5 6" stroke="currentColor" stroke-width="2.25" stroke-linecap="round" stroke-linejoin="round"></path>
           </svg>
-        </label>
+        </div>
 
-        <span class="mu-fbt-list-title">Patchouli Scented Candle
-        </span>
+        <label for="input-4" class="mu-fbt-list-title">Patchouli Scented Candle</label>
         <select class="mu-fbt-select">
           <option>M</option>
           <option>L</option>
@@ -139,15 +140,14 @@
       </div>
 
       <div class="mu-fbt-list-item">
-        <input class="mu-checkbox" type="checkbox" id="input-5" checked>
-        <label for="input-5" class="mu-checkbox-label">
+        <div class="mu-checkbox">
+          <input type="checkbox" id="input-5" checked>
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18" fill="none">
             <path d="M4.5 8.93878L7.52727 12L13.5 6" stroke="currentColor" stroke-width="2.25" stroke-linecap="round" stroke-linejoin="round"></path>
           </svg>
-        </label>
+        </div>
 
-        <span class="mu-fbt-list-title">Gray Peshawari IPS-PSH25-011
-        </span>
+        <label for="input-5" class="mu-fbt-list-title">Gray Peshawari IPS-PSH25-011</label>
         <select class="mu-fbt-select">
           <option>Medium black</option>
           <option>Large black</option>
@@ -159,14 +159,14 @@
       </div>
 
       <div class="mu-fbt-list-item">
-        <input class="mu-checkbox" type="checkbox" id="input-6" checked>
-        <label for="input-6" class="mu-checkbox-label">
+        <div class="mu-checkbox">
+          <input type="checkbox" id="input-6" checked>
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18" fill="none">
             <path d="M4.5 8.93878L7.52727 12L13.5 6" stroke="currentColor" stroke-width="2.25" stroke-linecap="round" stroke-linejoin="round"></path>
           </svg>
-        </label>
+        </div>
 
-        <span class="mu-fbt-list-title">Sky Blue Shoulder Bag IBS-SHB25-032</span>
+        <label for="input-6" class="mu-fbt-list-title">Sky Blue Shoulder Bag IBS-SHB25-032</label>
         <select class="mu-fbt-select">
           <option>M</option>
           <option>L</option>
