--- a/index.html
+++ b/index.html
@@ -32,6 +32,18 @@
         </a>
 
         <div class="mu-fbt-plus">+</div>
+    
+        <a href="#" class="mu-fbt-product">
+          <img class="mu-product-img" src="https://www.gulahmedshop.com/media/catalog/product/4/3/434035-sky-blue-shoulder-bag-front-ideas.jpg?optimize=low&fit=bounds&height=750&width=500&canvas=500:750" alt="Product 3">
+        </a>
+
+        <div class="mu-fbt-plus">+</div>
+    
+        <a href="#" class="mu-fbt-product">
+          <img class="mu-product-img" src="https://www.gulahmedshop.com/media/catalog/product/4/3/434035-sky-blue-shoulder-bag-front-ideas.jpg?optimize=low&fit=bounds&height=750&width=500&canvas=500:750" alt="Product 3">
+        </a>
+
+        <div class="mu-fbt-plus">+</div>
 
         <a href="#" class="mu-fbt-product">
           <img class="mu-product-img" src="https://www.gulahmedshop.com/media/catalog/product/p/a/patcholi_1_.jpg?optimize=low&fit=bounds&height=900&width=599" alt="Product 4">
